<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:title="@string/home" />

    <item
        android:id="@+id/nav_zusammenfassungen"
        android:title="@string/zusammenfassungen" />

    <item
        android:id="@+id/nav_timetable"
        android:title="@string/timetable" />

    <item
        android:id="@+id/nav_homework"
        android:title="@string/homework" />

    <item
        android:id="@+id/nav_about"
        android:title="@string/about" />

    <!--All dropdowns must come here, single items come above-->

    <item android:title="@string/french"
        android:id="@+id/nav_french">
        <menu>
            <item
                android:id="@+id/nav_french_times"
                android:title="@string/times" />
        </menu>
    </item>

</menu>