<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/ressources"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/ressources"
        android:textSize="30sp" />

    <ScrollView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/home_fragment_scrollview"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/ressources">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/home_zusammenfassungen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/zusammenfassungen"
                style="@style/StandardButton"/>

            <Button
                android:id="@+id/home_french"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/home_zusammenfassungen"
                android:text="@string/french"
                style="@style/StandardButton"/>

            <Button
                android:id="@+id/home_timetable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/home_french"
                android:text="@string/timetable"
                style="@style/StandardButton"/>

            <Button
                android:id="@+id/home_homework"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/home_timetable"
                android:text="@string/homework"
                style="@style/StandardButton"/>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>